--- a/02_code/android/EorderMobile/res/layout/maintab_activity.xml
+++ b/02_code/android/EorderMobile/res/layout/maintab_activity.xml
@@ -9,15 +9,13 @@
             android:id="@android:id/tabcontent" 
             android:layout_width="fill_parent" 
             android:layout_height="0.0dip" 
-            android:layout_weight="1.0" />
-        
+            android:layout_weight="1.0" />	        
         	<TabWidget 
             	android:id="@android:id/tabs" 
             	android:visibility="gone" 
             	android:layout_width="fill_parent" 
             	android:layout_height="wrap_content" 
-            	android:layout_weight="0.0" />
-        
+            	android:layout_weight="0.0" />        
         		<LinearLayout 
             		android:gravity="bottom" 
 	            	android:layout_gravity="bottom" 
@@ -26,8 +24,26 @@
 	            	android:paddingTop="6.0dip" 
 	            	android:layout_width="fill_parent" 
 	            	android:layout_height="wrap_content">
+	            	
+            		<RadioButton 
+                		android:id="@+id/tab_goodsshop" 
+	                	android:checked="true" 
+	                	android:text="@string/tab_name_goodsshop" 
+	                	android:drawableTop="@drawable/tab_selector_goodsshop" 
+	                	style="@style/MMTabButton" />
             	
-			        	    			            	            
+	            	<RadioButton 
+	                	android:id="@+id/tab_userorder" 
+	                	android:text="@string/tab_name_userorder" 
+	                	android:drawableTop="@drawable/tab_selector_userorder" 
+	                	style="@style/MMTabButton" />
+	            				
+	                <RadioButton 
+		            	android:id="@+id/tab_settings" 
+		            	android:text="@string/tab_name_settings" 
+		            	android:drawableTop="@drawable/tab_selector_settings" 
+		            	style="@style/MMTabButton" />			        	    			            	            
         		</LinearLayout>        	
 	</LinearLayout>
 </TabHost>
+	
