--- a/02_code/android/eOrderMobile/res/layout/classify_griditem.xml
+++ b/02_code/android/eOrderMobile/res/layout/classify_griditem.xml
@@ -1,34 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>  
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
-	android:layout_width="fill_parent" android:layout_height="fill_parent"  
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
+	android:layout_width="fill_parent" 
+	android:layout_height="fill_parent"  
     android:orientation="vertical"  
     android:layout_marginTop="5dp"  
 	>
-	  
-	<ImageView 
+				  
+	<com.innovaee.eorder.mobile.util.RemoteImageView 
 	    android:id="@+id/classify_image" 
-	    android:layout_width="80dip"  
-      	android:layout_height="80dip" 
-      	android:layout_gravity="center_horizontal">  
-   	</ImageView>  
-     
+	    android:layout_width="fill_parent"  
+      	android:layout_height="fill_parent" 
+      	android:layout_gravity="center_horizontal"
+      	android:background="@drawable/test_001"
+      	>  	
+   	</com.innovaee.eorder.mobile.util.RemoteImageView>  
+														  																															   							
    	<TextView 
    	    android:id="@+id/classify_name" 
-   	    android:layout_width="wrap_content"  
+   	    android:layout_width="fill_parent"  
         android:layout_height="wrap_content" 
         android:layout_gravity="left"  
-        android:textSize="16dip"  
+        android:paddingLeft="20dp"
+        android:textSize="20dp"  
+        android:background="#ff222222"
+        android:text="分类名１"
+        android:layout_alignParentBottom="true"
         android:gravity="left">  
   	</TextView>  
-      
-    <TextView 
-        android:id="@+id/classify_description" 
-        android:layout_width="wrap_content"  
-      	android:layout_height="wrap_content" 
-      	android:layout_gravity="left"  
-      	android:textColor="#938192"  
-      	android:textSize="13dip"  
-      	android:gravity="left">  
- 	</TextView>  
-</LinearLayout>  
+      		
+</RelativeLayout>  
 	
+
