--- a/02_code/android/eOrderMobile/res/layout/foodsshop_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout/foodsshop_activity.xml
@@ -7,6 +7,7 @@
     	android:orientation="horizontal" 
     	android:layout_width="fill_parent" 
     	android:layout_height="wrap_content"
+    	android:background="#ffffffff"
     	android:id="@+id/title_bar">		
     	<TextView android:layout_width="wrap_content" 
         	android:layout_centerInParent="true" 
@@ -24,9 +25,10 @@
     	android:verticalSpacing="10dp"
     	android:horizontalSpacing="10dp"
     	android:stretchMode="columnWidth"
-    	android:gravity="center"			
+    	android:gravity="center"		
+    	android:background="#ffffffff"	
     	android:layout_below="@+id/title_bar"
 	/>		
-    				
+    						
 </RelativeLayout>
 		
