--- a/02_code/android/eOrderMobile/res/drawable/tab_selector_settings.xml
+++ b/02_code/android/eOrderMobile/res/drawable/tab_selector_settings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_checked="false" android:drawable="@drawable/tab_icon2"></item>
-    <item android:state_checked="true" android:drawable="@drawable/tab_icon2_select"></item>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:drawable="@drawable/tab_icon2" android:state_checked="false"></item>
+    <item android:drawable="@drawable/tab_icon2_select" android:state_checked="true"></item>
 
 </selector>
