--- a/02_code/android/eOrderMobile/res/drawable/tab_selector_userorder.xml
+++ b/02_code/android/eOrderMobile/res/drawable/tab_selector_userorder.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item android:state_checked="false" android:drawable="@drawable/tab_icon3"></item>
-    <item android:state_checked="true" android:drawable="@drawable/tab_icon3_select"></item>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:drawable="@drawable/tab_icon3" android:state_checked="false"></item>
+    <item android:drawable="@drawable/tab_icon3_select" android:state_checked="true"></item>
 
 </selector>
