--- a/02_code/android/eOrderMobile/res/layout/classify_griditem.xml
+++ b/02_code/android/eOrderMobile/res/layout/classify_griditem.xml
@@ -1,33 +1,29 @@
-<?xml version="1.0" encoding="utf-8"?>  
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
-	android:layout_width="fill_parent" 
-	android:layout_height="fill_parent"  
-    android:orientation="vertical"  
-    android:layout_marginTop="5dp"  
-	>
-				  
-	<com.innovaee.eorder.mobile.util.RemoteImageView 
-	    android:id="@+id/classify_image" 
-	    android:layout_width="fill_parent"  
-      	android:layout_height="fill_parent" 
-      	android:layout_gravity="center_horizontal"
-      	android:background="@drawable/test_001"
-      	>  	
-   	</com.innovaee.eorder.mobile.util.RemoteImageView>  
-														  																															   							
-   	<TextView 
-   	    android:id="@+id/classify_name" 
-   	    android:layout_width="fill_parent"  
-        android:layout_height="wrap_content" 
-        android:layout_gravity="left"  
-        android:paddingLeft="20dp"
-        android:textSize="20dp"  
-        android:background="#ff222222"
-        android:text="分类名１"
-        android:layout_alignParentBottom="true"
-        android:gravity="left">  
-  	</TextView>  
-      		
-</RelativeLayout>  
-	
+<?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_marginTop="5dp"
+    android:orientation="vertical" >
 
+    <com.innovaee.eorder.mobile.util.RemoteImageView
+        android:id="@+id/classify_image"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_gravity="center_horizontal"
+        android:background="@drawable/test_001" >
+    </com.innovaee.eorder.mobile.util.RemoteImageView>
+
+    <TextView
+        android:id="@+id/classify_name"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_gravity="left"
+        android:background="#ff222222"
+        android:gravity="left"
+        android:paddingLeft="20dp"
+        android:text="分类名１"
+        android:textSize="20dp" >
+    </TextView>
+
+</RelativeLayout>
