--- a/02_code/android/eOrderMobile/res/layout/userorder_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout/userorder_activity.xml
@@ -2,8 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-
+    android:orientation="vertical"
+    android:background="#ffffffff" 
+    >
+	
     <RelativeLayout
         android:id="@+id/title_bar"
         android:layout_width="fill_parent"
