--- a/02_code/android/eOrderMobile/res/layout/classify_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout/classify_activity.xml
@@ -4,31 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <RelativeLayout
-        android:id="@+id/title_bar"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="#ffffffff"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/tab_name_goodsshop"
-            android:textColor="#FF000000"
-            android:textSize="24dp" />
-    </RelativeLayout>
-
     <GridView
         android:id="@+id/goods_gridview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_below="@+id/title_bar"
         android:background="#ffffffff"
         android:gravity="center"
         android:horizontalSpacing="10dp"
-        android:numColumns="3"
+        android:numColumns="2"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
         android:stretchMode="columnWidth"
         android:verticalSpacing="10dp" />
 
