--- a/02_code/android/eOrderMobile/res/layout/classify_griditem.xml
+++ b/02_code/android/eOrderMobile/res/layout/classify_griditem.xml
@@ -7,23 +7,23 @@
 
     <com.innovaee.eorder.mobile.util.RemoteImageView
         android:id="@+id/classify_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="232dp"
+        android:layout_height="232dp"
         android:layout_gravity="center_horizontal"
-        android:scaleType="center" 		
-        android:background="@drawable/test_001" >
+        android:scaleType="centerCrop" >
     </com.innovaee.eorder.mobile.util.RemoteImageView>
-							
+
     <TextView
         android:id="@+id/classify_name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="left"
-        android:background="#ff222222"
+        android:background="#ffeeeeee"
         android:gravity="left"
         android:paddingLeft="20dp"
         android:text="分类名１"
+        android:textColor="#000000"
         android:textSize="20dp" >
     </TextView>
 
