--- a/02_code/android/eOrderMobile/res/layout/myorder_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout/myorder_activity.xml
@@ -2,10 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#ffffffff" 
-    >
-	
+    android:background="#ffffffff"
+    android:orientation="vertical" >
+
     <RelativeLayout
         android:id="@+id/title_bar"
         android:layout_width="fill_parent"
