--- a/02_code/android/eOrderMobile/res/layout/goods_griditem.xml
+++ b/02_code/android/eOrderMobile/res/layout/goods_griditem.xml
@@ -5,26 +5,60 @@
     android:layout_marginTop="5dp"
     android:orientation="vertical" >
 
-    <com.innovaee.eorder.mobile.util.RemoteImageView
-        android:id="@+id/goods_image"
-        android:layout_width="232dp"
-        android:layout_height="232dp"
-        android:layout_gravity="center_horizontal"
-        android:scaleType="centerCrop" >
-    </com.innovaee.eorder.mobile.util.RemoteImageView>
-                                
-    <TextView
-        android:id="@+id/goods_name"
-        android:layout_width="fill_parent"
+    <LinearLayout 
+        android:id="@+id/layout_goods_bitmap"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_gravity="left"
-        android:background="#ffeeeeee"
-        android:gravity="left"
-        android:paddingLeft="20dp"
-        android:text="分类名１"
-        android:textColor="#000000"
-        android:textSize="20dp" >
-    </TextView>
-                                                        
+        android:onClick="clickOnOrderHestory" 
+        android:orientation="vertical">
+        
+        <com.innovaee.eorder.mobile.util.RemoteImageView
+            android:id="@+id/goods_image"
+            android:layout_width="232dp"
+            android:layout_height="232dp"
+            android:layout_gravity="center_horizontal"
+            android:scaleType="centerCrop" >
+        </com.innovaee.eorder.mobile.util.RemoteImageView>
+    
+        <TextView
+            android:id="@+id/goods_name"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="center"
+            android:background="#ffeeeeee"
+            android:gravity="left"
+            android:paddingLeft="20dp"
+            android:text="菜品名"
+            android:textColor="#000000"
+            android:textSize="20dp" />
+    </LinearLayout>   
+                        
+    <LinearLayout 
+        android:id="@+id/layout_goods_order"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/layout_goods_bitmap"
+        android:orientation="horizontal">
+        <TextView   
+            android:id="@+id/goods_price"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="left"
+            android:background="#ffeeeeee"
+            android:gravity="left"
+            android:paddingLeft="20dp"
+            android:text="分类名１"
+            android:textColor="#000000"
+            android:textSize="20dp" />
+                                                                                                           
+        <Button
+            android:id="@+id/order_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="下单"
+            />      
+    </LinearLayout>
+                                                                                                    
 </RelativeLayout>
