--- a/02_code/android/eOrderMobile/res/layout/goods_griditem.xml
+++ b/02_code/android/eOrderMobile/res/layout/goods_griditem.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
     android:orientation="vertical" >
-
-    <LinearLayout 
+                    
+    <RelativeLayout 
         android:id="@+id/layout_goods_bitmap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="232dp"
+        android:layout_height="232dp"
         android:onClick="clickOnOrderHestory" 
         android:orientation="vertical">
         
@@ -19,46 +19,46 @@
             android:layout_gravity="center_horizontal"
             android:scaleType="centerCrop" >
         </com.innovaee.eorder.mobile.util.RemoteImageView>
-    
+
         <TextView
             android:id="@+id/goods_name"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="center"
             android:background="#ffeeeeee"
             android:gravity="left"
             android:paddingLeft="20dp"
-            android:text="菜品名"
+            android:text="@string/main_griditem_text_name"  
             android:textColor="#000000"
-            android:textSize="20dp" />
-    </LinearLayout>   
-                        
+            android:layout_alignParentBottom="true"
+            android:textSize="20dp" />        
+    </RelativeLayout>   
+                                    
     <LinearLayout 
         android:id="@+id/layout_goods_order"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@id/layout_goods_bitmap"
+        android:layout_centerInParent="true"
         android:orientation="horizontal">
         <TextView   
             android:id="@+id/goods_price"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:layout_gravity="left"
             android:background="#ffeeeeee"
-            android:gravity="left"
-            android:paddingLeft="20dp"
-            android:text="分类名１"
+            android:gravity="center"
+            android:paddingLeft="10dp"
+            android:text="@string/main_griditem_text_price"
             android:textColor="#000000"
-            android:textSize="20dp" />
-                                                                                                           
-        <Button
+            android:layout_weight="1" 
+            android:textSize="20dp" />                                                                                                                                                                
+        <Button         
             android:id="@+id/order_button"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="下单"
-            />      
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="@string/main_griditem_btn_order"
+            />                  
     </LinearLayout>
                                                                                                     
 </RelativeLayout>
