修改首页Item效果，完成下单界面列表界面框架

--- a/02_code/android/eOrderMobile/res/layout/myorder_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout/myorder_activity.xml
@@ -19,5 +19,48 @@
             android:textColor="#FF000000"
             android:textSize="24dp" />
     </RelativeLayout>
-
+                        
+    <RelativeLayout  	
+    	android:orientation="horizontal" 
+    	android:layout_below="@+id/title_bar"
+    	android:layout_width="fill_parent" 
+    	android:layout_height="wrap_content"
+    	android:id="@+id/myorder_content">	
+    	
+        <ListView
+        	android:id="@+id/myorder_listView"
+        	android:layout_width="match_parent"
+        	android:layout_height="wrap_content" 
+        	android:divider="#FF222222"
+        	android:dividerHeight="2dp"
+        	android:minHeight="36dp"	
+        	>
+    	</ListView>		
+    				
+    	<RelativeLayout
+        	android:id="@+id/myorder_layout_button"
+        	android:layout_width="fill_parent"
+        	android:layout_height="40dp"
+        	android:layout_alignParentBottom="true"
+        	android:background="#FFBBBBBB"
+        	android:orientation="vertical" >		
+																																			
+        	<Button
+            	android:id="@+id/ok_button"
+            	android:layout_width="wrap_content"
+            	android:layout_height="wrap_content"
+            	android:layout_alignParentLeft="true"
+            	android:layout_marginLeft="20dp"
+            	android:text="ok" />
+		  
+        	<Button
+            	android:id="@+id/cancel_button"
+            	android:layout_width="wrap_content"
+            	android:layout_height="wrap_content"
+            	android:layout_alignParentRight="true"
+            	android:layout_marginRight="20dp"
+            	android:text="cancel" />	
+    	</RelativeLayout>	    																																					
+    </RelativeLayout>
+                            
 </RelativeLayout>
