--- a/02_code/android/eOrderMobile/res/layout/goods_griditem.xml
+++ b/02_code/android/eOrderMobile/res/layout/goods_griditem.xml
@@ -8,8 +8,7 @@
     <RelativeLayout 
         android:id="@+id/layout_goods_bitmap"
         android:layout_width="232dp"
-        android:layout_height="232dp"
-        android:onClick="clickOnOrderHestory" 
+        android:layout_height="232dp"        
         android:orientation="vertical">
         
         <com.innovaee.eorder.mobile.util.RemoteImageView
@@ -32,33 +31,26 @@
             android:layout_alignParentBottom="true"
             android:textSize="20dp" />        
     </RelativeLayout>   
-                                    
+                                               
     <LinearLayout 
         android:id="@+id/layout_goods_order"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@id/layout_goods_bitmap"
         android:layout_centerInParent="true"
         android:orientation="horizontal">
-        <TextView   
+        <TextView           
             android:id="@+id/goods_price"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="left"
+            android:layout_gravity="left"   
             android:background="#ffeeeeee"
-            android:gravity="center"
-            android:paddingLeft="10dp"
+            android:gravity="left"
+            android:paddingLeft="20dp"
             android:text="@string/main_griditem_text_price"
             android:textColor="#000000"
             android:layout_weight="1" 
             android:textSize="20dp" />                                                                                                                                                                
-        <Button         
-            android:id="@+id/order_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="@string/main_griditem_btn_order"
-            />                  
     </LinearLayout>
-                                                                                                    
+                                                                                                        
 </RelativeLayout>
