--- a/02_code/android/eOrderMobile/res/layout/order_listitem.xml
+++ b/02_code/android/eOrderMobile/res/layout/order_listitem.xml
@@ -13,6 +13,7 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="10dp"
             android:layout_weight="2"
+            android:layout_centerInParent="true"
             android:scaleType="centerCrop" >
         </com.innovaee.eorder.mobile.util.RemoteImageView>                                            
                             
@@ -22,19 +23,21 @@
             android:layout_height="wrap_content"
             android:background="#ffeeeeee"
             android:gravity="center"
-            android:text="@string/main_griditem_text_price"
+            android:text="@string/main_griditem_text_name"
             android:textColor="#000000"
             android:layout_toRightOf="@id/goods_image"
             android:layout_marginLeft="10dp"
             android:layout_weight="8"       
+            android:layout_centerInParent="true"
             android:textSize="20dp" />   
-                                 
+                                    
         <Spinner        
             android:id="@+id/number_Spinner"
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/goods_name"  
             android:layout_marginLeft="10dp" 
+            android:layout_centerInParent="true"
             android:layout_weight="4"
             />                                            
                                    	                                                                                                                                                                                                                            
@@ -44,8 +47,9 @@
             android:layout_height="wrap_content"  
             android:layout_alignParentRight="true"  
             android:paddingRight="20dp"                     
-            android:layout_weight="2"                                                 
-            android:text="@string/main_griditem_btn_order"
-            />                                 
+            android:layout_weight="2"     
+            android:layout_centerInParent="true" 
+            android:text="@string/main_griditem_text_price"
+            />                                              
                                                                                                           
 </RelativeLayout>
