--- a/02_code/android/eOrderMobile/res/layout/goods_griditem.xml
+++ b/02_code/android/eOrderMobile/res/layout/goods_griditem.xml
@@ -18,39 +18,39 @@
             android:layout_gravity="center_horizontal"
             android:scaleType="centerCrop" >
         </com.innovaee.eorder.mobile.util.RemoteImageView>
-
-        <TextView
-            android:id="@+id/goods_name"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:background="#ffeeeeee"
-            android:gravity="left"
-            android:paddingLeft="20dp"
-            android:text="@string/main_griditem_text_name"  
-            android:textColor="#000000"
-            android:layout_alignParentBottom="true"
-            android:textSize="20dp" />        
     </RelativeLayout>   
                                                
     <LinearLayout 
         android:id="@+id/layout_goods_order"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_below="@id/layout_goods_bitmap"
         android:layout_centerInParent="true"
+        android:gravity="center"
         android:orientation="horizontal">
+        <TextView
+            android:id="@+id/goods_name"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="#ffeeeeee"
+            android:gravity="left|center_vertical"
+            android:paddingLeft="20dp"
+            android:text="@string/main_griditem_text_name"  
+            android:textColor="#333333"
+            android:layout_weight="1"
+            android:textSize="20dp" />  
+                                                                 
         <TextView           
             android:id="@+id/goods_price"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="left"   
+            android:layout_height="match_parent"   
             android:background="#ffeeeeee"
-            android:gravity="left"
-            android:paddingLeft="20dp"
+            android:gravity="right|center_vertical"  
+            android:paddingRight="20dp"
             android:text="@string/main_griditem_text_price"
-            android:textColor="#000000"
+            android:textColor="#CC0033"
             android:layout_weight="1" 
             android:textSize="20dp" />                                                                                                                                                                
     </LinearLayout>
-                                                                                                        
+                                                                                                                
 </RelativeLayout>
