--- a/02_code/android/eOrderMobile/res/layout/maintab_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout/maintab_activity.xml
@@ -10,12 +10,12 @@
         android:layout_height="fill_parent"
         android:background="#ffffffff"
         android:gravity="center"
-        android:horizontalSpacing="10dp"
+        android:horizontalSpacing="2dp"
+        android:verticalSpacing="2dp"
         android:numColumns="2"
         android:paddingLeft="2dp"
         android:paddingRight="2dp"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="10dp" />
-
+        android:stretchMode="columnWidth"/>
+        
 </RelativeLayout>
                 
