--- a/02_code/android/eOrderMobile/res/layout/myorder_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout/myorder_activity.xml
@@ -4,25 +4,9 @@
     android:layout_height="match_parent"
     android:background="#ffffffff"
     android:orientation="vertical" >
-
-    <RelativeLayout
-        android:id="@+id/title_bar"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="我的订单"
-            android:textColor="#FF000000"
-            android:textSize="24dp" />
-    </RelativeLayout>
-                        
+                                              
     <RelativeLayout  	
-    	android:orientation="horizontal" 
-    	android:layout_below="@+id/title_bar"
+    	android:orientation="horizontal"       
     	android:layout_width="fill_parent" 
     	android:layout_height="wrap_content"
     	android:id="@+id/myorder_content">	
@@ -42,24 +26,36 @@
         	android:layout_width="fill_parent"
         	android:layout_height="40dp"
         	android:layout_alignParentBottom="true"
-        	android:background="#FFBBBBBB"
+        	android:background="#ffeeeeee"
         	android:orientation="vertical" >		
-																																			
+			<TextView                   
+                android:id="@+id/goods_allprice"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentLeft="true"
+                android:gravity="left|center_vertical" 
+                android:background="#ffeeeeee"                    
+                android:layout_marginLeft="40dp" 
+                android:text="5555"                           
+                android:textColor="#CC0033"      
+                android:textSize="20dp" />
+            		
+            <Button
+                android:id="@+id/cancel_button"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="40dp"
+                android:text="cancel" />    
+                																														
         	<Button
             	android:id="@+id/ok_button"
-            	android:layout_width="wrap_content"
+            	android:layout_width="80dp"
             	android:layout_height="wrap_content"
-            	android:layout_alignParentLeft="true"
-            	android:layout_marginLeft="20dp"
-            	android:text="ok" />
-		  
-        	<Button
-            	android:id="@+id/cancel_button"
-            	android:layout_width="wrap_content"
-            	android:layout_height="wrap_content"
-            	android:layout_alignParentRight="true"
+                android:layout_toLeftOf="@id/cancel_button"
             	android:layout_marginRight="20dp"
-            	android:text="cancel" />	
+            	android:text="ok" />
+    		                             
     	</RelativeLayout>	    																																					
     </RelativeLayout>
                             
