--- a/02_code/android/eOrderMobile/res/layout/order_listitem.xml
+++ b/02_code/android/eOrderMobile/res/layout/order_listitem.xml
@@ -1,55 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:layout_gravity="center" 
-    android:orientation="vertical" >
-                                                                   
+    android:background="#ffeeeeee">
+                                                                              
         <com.innovaee.eorder.mobile.util.RemoteImageView
             android:id="@+id/goods_image"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_gravity="center_horizontal"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="2"
+            android:layout_marginLeft="2dp"
             android:layout_centerInParent="true"
             android:scaleType="centerCrop" >
         </com.innovaee.eorder.mobile.util.RemoteImageView>                                            
-                            
-        <TextView       
-            android:id="@+id/goods_name"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:background="#ffeeeeee"
-            android:gravity="center"
-            android:text="@string/main_griditem_text_name"
-            android:textColor="#000000"
+                                  
+        <RelativeLayout 
+            android:id="@+id/goods_layout_text"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"   
             android:layout_toRightOf="@id/goods_image"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="8"       
-            android:layout_centerInParent="true"
-            android:textSize="20dp" />   
-                                    
-        <Spinner        
-            android:id="@+id/number_Spinner"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/goods_name"  
-            android:layout_marginLeft="10dp" 
-            android:layout_centerInParent="true"
-            android:layout_weight="4"
-            />                                            
-                                   	                                                                                                                                                                                                                            
-        <TextView         
-            android:id="@+id/goods_allprice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"  
-            android:layout_alignParentRight="true"  
-            android:paddingRight="20dp"                     
-            android:layout_weight="2"     
-            android:layout_centerInParent="true" 
-            android:text="@string/main_griditem_text_price"
-            />                                              
+            android:layout_centerInParent="true">
+            
+            <RelativeLayout 
+                android:id="@+id/goods_layout_name"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"               
+                android:layout_alignParentTop="true">  
+                <TextView
+                    android:id="@+id/goods_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:background="#ffeeeeee"
+                    android:gravity="left|center_vertical"
+                    android:paddingLeft="40dp"
+                    android:text="@string/main_griditem_text_name"  
+                    android:textColor="#333333"
+                    android:textSize="20dp" /> 
+               <Spinner                
+                    android:id="@+id/number_Spinner"
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="20dp" 
+                    android:layout_centerInParent="true"/>                                                      
+            </RelativeLayout>
+                                                 
+            <RelativeLayout 
+                android:id="@+id/goods_layout_allprice"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"   
+                android:layout_alignParentBottom="true"> 
+             <TextView                   
+                    android:id="@+id/goods_allprice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentRight="true"
+                    android:gravity="right|center_vertical" 
+                    android:background="#ffeeeeee"                    
+                    android:layout_marginRight="24dp" 
+                    android:text="5555"                           
+                    android:textColor="#CC0033"      
+                    android:textSize="20dp" />                                          
+            </RelativeLayout>
+                
+      </RelativeLayout>                                                      
                                                                                                           
 </RelativeLayout>
