--- a/02_code/android/eOrderMobile/res/layout/goods_griditem.xml
+++ b/02_code/android/eOrderMobile/res/layout/goods_griditem.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
     android:orientation="vertical" >
-                          
+                                     
     <RelativeLayout 
         android:id="@+id/layout_goods_bitmap"
         android:layout_width="232dp"
@@ -32,23 +32,23 @@
             android:id="@+id/goods_name"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:background="#ffeeeeee"
+            android:background="#ffffff"
             android:gravity="left|center_vertical"
             android:paddingLeft="20dp"
             android:text="@string/main_griditem_text_name"  
-            android:textColor="#333333"
+            android:textColor="#4d4d4d"
             android:layout_weight="1"
             android:textSize="20dp" />  
-                                                                 
+                                                                      
         <TextView           
             android:id="@+id/goods_price"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"   
-            android:background="#ffeeeeee"
+            android:background="#ffffff"
             android:gravity="right|center_vertical"  
             android:paddingRight="20dp"
             android:text="@string/main_griditem_text_price"
-            android:textColor="#CC0033"
+            android:textColor="#fe3c3c"
             android:layout_weight="1" 
             android:textSize="20dp" />                                                                                                                                                                
     </LinearLayout>
