--- a/02_code/android/eOrderMobile/res/layout/maintab_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout/maintab_activity.xml
@@ -8,7 +8,7 @@
         android:id="@+id/goods_gridview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#ffffffff"
+        android:background="#ededed"
         android:gravity="center"
         android:horizontalSpacing="2dp"
         android:verticalSpacing="2dp"
