--- a/02_code/android/eOrderMobile/res/layout/order_listitem.xml
+++ b/02_code/android/eOrderMobile/res/layout/order_listitem.xml
@@ -39,31 +39,55 @@
                     android:text="@string/main_griditem_text_name"  
                     android:textColor="#4d4d4d"
                     android:textSize="20dp" /> 
-               <Spinner                
-                    android:id="@+id/number_Spinner"
+               <TextView                
+                    android:id="@+id/goods_allprice"
                     android:layout_width="60dp"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="20dp" 
-                    android:layout_centerInParent="true"/>                                                      
-            </RelativeLayout>
-                                                 
-            <RelativeLayout 
-                android:id="@+id/goods_layout_allprice"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"   
-                android:layout_alignParentBottom="true"> 
-             <TextView                   
-                    android:id="@+id/goods_allprice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
                     android:layout_alignParentRight="true"
                     android:gravity="right|center_vertical" 
                     android:background="#ffeeeeee"                    
                     android:layout_marginRight="24dp" 
                     android:text="@string/main_griditem_text_price"                           
                     android:textColor="#fe3c3c"             
-                    android:textSize="20dp" />                                          
+                    android:textSize="20dp"  
+                    android:layout_centerInParent="true"/>                        
+            </RelativeLayout>
+                                                                     
+            <RelativeLayout 
+                android:id="@+id/count_select_layout"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"   
+                android:layout_alignParentBottom="true"> 
+                <Button 
+                    android:id="@+id/count_add_button"
+                    android:layout_width="43dp"
+                    android:layout_height="43dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="20dp"
+                    android:background="@drawable/myorder_btn_count_add_bg"/>    
+                <TextView                    
+                    android:id="@+id/count_text"
+                    android:layout_width="60dp"
+                    android:layout_height="wrap_content"
+                    android:layout_toLeftOf="@id/count_add_button"
+                    android:layout_centerVertical="true"
+                	android:layout_marginRight="14dp"
+                    android:gravity="center"    
+                    android:background="#ffffff"                     
+                    android:text="@string/main_griditem_text_price"                           
+                    android:textColor="#4d4d4d"             
+                    android:textSize="20dp"  
+                    android:layout_centerInParent="true"/>   
+                                                                 	                              																													
+            	<Button    
+                	android:id="@+id/count_cutdown_button"
+                	android:layout_width="43dp"
+                	android:layout_height="43dp"
+                    android:layout_toLeftOf="@id/count_text"
+                    android:layout_centerVertical="true"
+                	android:layout_marginRight="14dp"
+                    android:background="@drawable/myorder_btn_count_cutdown_bg"/>                                         
             </RelativeLayout>           
                 
       </RelativeLayout>                                                      
