--- a/02_code/android/eOrderMobile/res/menu/main_activity_actions.xml
+++ b/02_code/android/eOrderMobile/res/menu/main_activity_actions.xml
@@ -13,6 +13,9 @@
         android:showAsAction="always"
         android:title="@string/action_more">
         <menu>
+            <item
+                android:id="@+id/action_menu_refresh"
+                android:title="@string/action_fresh"/>
             <item   
                 android:id="@+id/action_menu_settings"
                 android:title="@string/action_settings"/>
