--- a/02_code/android/eOrderMobile/res/layout/settings_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout/settings_activity.xml
@@ -24,9 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_below="@id/service_text"> 	
-        <EditText            													 						          
+        <EditText         		   													 						          
         	android:id="@+id/service_url"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
