--- a/02_code/android/eOrderMobile/res/layout-xxhdpi/order_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout-xxhdpi/order_activity.xml
@@ -47,6 +47,9 @@
             android:layout_height="43dp"       
             android:layout_toRightOf="@id/table_id"
             android:layout_centerVertical="true"
+            android:maxLength="20"
+            android:singleLine="true"
+            android:inputType="number"
             android:hint="@string/order_text_hint_tableid"  
             android:textSize="20dp"/>                                  
     </RelativeLayout>
@@ -76,6 +79,9 @@
             android:layout_height="43dp"       
             android:layout_toRightOf="@id/employee_id"
             android:layout_centerVertical="true"
+            android:maxLength="20"
+            android:singleLine="true"
+            android:inputType="number"
             android:hint="@string/order_text_hint_qrcode"  
             android:textSize="20dp"/>   
         <Button          
@@ -113,6 +119,9 @@
             android:layout_height="43dp"       
             android:layout_toRightOf="@id/user_id"
             android:layout_centerVertical="true"
+            android:maxLength="20"
+            android:singleLine="true"
+            android:inputType="number"
             android:hint="@string/order_text_hint_userid"  
             android:textSize="20dp"/>  
         <Button                 
@@ -126,7 +135,7 @@
             android:textColor="#ffffff"       
             android:background="@drawable/myorder_btn_order_bg"/>                                 
     </RelativeLayout>
-                    
+                 		   
     <RelativeLayout     
         android:orientation="horizontal"       
         android:layout_width="fill_parent" 
@@ -136,7 +145,7 @@
         android:id="@+id/layout_05">  
         <TextView                   
             android:id="@+id/discount_price"
-            android:layout_width="80dp"
+            android:layout_width="120dp"
             android:layout_height="43dp"
             android:layout_alignParentRight="true"
             android:gravity="right|center_vertical" 
@@ -159,7 +168,7 @@
             android:textColor="#4d4d4d"      
             android:textSize="20dp" />                              
     </RelativeLayout>       
-                                
+                   		             
     <RelativeLayout     
         android:orientation="horizontal"       
         android:layout_width="fill_parent" 
