--- a/02_code/android/eOrderMobile/res/layout-xxhdpi/myspinner_dropdown.xml
+++ b/02_code/android/eOrderMobile/res/layout-xxhdpi/myspinner_dropdown.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>  
-    <TextView  
-      xmlns:android="http://schemas.android.com/apk/res/android"  
-      android:id="@+id/text1"  
-      android:layout_width="wrap_content"  
-      android:layout_height="24sp"  
-      android:singleLine="true"  
-      style="?android:attr/spinnerDropDownItemStyle">  
-    </TextView>
-          
+<?xml version="1.0" encoding="utf-8"?>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/text1"
+    style="?android:attr/spinnerDropDownItemStyle"
+    android:layout_width="wrap_content"
+    android:layout_height="24sp"
+    android:singleLine="true" >
+
+</TextView>
