--- a/02_code/android/eOrderMobile/res/layout-xxhdpi/order_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout-xxhdpi/order_activity.xml
@@ -1,215 +1,233 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#ededed"
-    android:orientation="vertical" >
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#ededed" >
 
-    <RelativeLayout     
-        android:orientation="horizontal"       
-        android:layout_width="fill_parent" 
-        android:layout_height="wrap_content"
-        android:id="@+id/layout_01">                      
-        <ListView   
-            android:id="@+id/myorder_listView"
-            android:layout_width="match_parent"
-            android:layout_height="236dp" 
-            android:divider="#d9d9d9"
-            android:dividerHeight="1dp"
-            android:minHeight="36dp"    
-            >      
-        </ListView>     
-    </RelativeLayout>   
-            
-    <RelativeLayout     
-        android:orientation="horizontal"       
-        android:layout_width="fill_parent" 
-        android:layout_height="43dp"        
-        android:layout_below="@id/layout_01"
-        android:layout_marginTop="15dp" 
-        android:background="#ededed"
-        android:id="@+id/layout_02">  
-        <TextView                           
-            android:id="@+id/table_id"
-            android:layout_width="78dp"
-            android:layout_height="43dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:gravity="left|center_vertical" 
-            android:background="#ededed"                    
-            android:layout_marginLeft="24dp" 
-            android:text="@string/order_text_title_tableid"                              
-            android:textColor="#4d4d4d"      
-            android:textSize="20dp" /> 
-       <EditText                    
-            android:id="@+id/table_input_id"
-            android:layout_width="220dp"
-            android:layout_height="43dp"       
-            android:layout_toRightOf="@id/table_id"
-            android:layout_centerVertical="true"
-            android:maxLength="20"
-            android:singleLine="true"
-            android:inputType="number"
-            android:hint="@string/order_text_hint_tableid"  
-            android:textSize="20dp"/>                                  
-    </RelativeLayout>
-                      
-    <RelativeLayout     
-        android:orientation="horizontal"       
-        android:layout_width="fill_parent" 
-        android:layout_height="43dp"
-        android:layout_below="@id/layout_02"
-        android:background="#ededed"
-        android:id="@+id/layout_03">  
-        <TextView                   
-            android:id="@+id/employee_id"
-            android:layout_width="78dp"
-            android:layout_height="43dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:gravity="left|center_vertical" 
-            android:background="#ededed"                    
-            android:layout_marginLeft="24dp" 
-            android:text="@string/order_text_title_employee"                              
-            android:textColor="#4d4d4d"      
-            android:textSize="20dp" /> 
-        <EditText                    
-            android:id="@+id/employee_input_id"
-            android:layout_width="220dp"
-            android:layout_height="43dp"       
-            android:layout_toRightOf="@id/employee_id"
-            android:layout_centerVertical="true"
-            android:maxLength="20"
-            android:singleLine="true"
-            android:inputType="number"
-            android:hint="@string/order_text_hint_qrcode"  
-            android:textSize="20dp"/>   
-        <Button          
-            android:id="@+id/employee_2code_id"
-            android:layout_width="121dp"
-            android:layout_height="43dp"
-            android:layout_toRightOf="@id/employee_input_id"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="17dp"
-            android:background="@drawable/order_btn_2code_bg"/>                                  
-    </RelativeLayout>
-                                        
-    <RelativeLayout     
-        android:orientation="horizontal"       
-        android:layout_width="fill_parent" 
-        android:layout_height="60dp"
-        android:layout_below="@id/layout_03"
-        android:background="#ededed"
-        android:id="@+id/layout_04">  
-        <TextView                   
-            android:id="@+id/user_id"
-            android:layout_width="78dp"
-            android:layout_height="43dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:gravity="left|center_vertical" 
-            android:background="#ededed"                    
-            android:layout_marginLeft="24dp" 
-            android:text="@string/order_text_title_userid"                              
-            android:textColor="#4d4d4d"      
-            android:textSize="20dp" /> 
-        <EditText                    
-            android:id="@+id/user_input_id"
-            android:layout_width="220dp"
-            android:layout_height="43dp"       
-            android:layout_toRightOf="@id/user_id"
-            android:layout_centerVertical="true"
-            android:maxLength="20"
-            android:singleLine="true"
-            android:inputType="number"
-            android:hint="@string/order_text_hint_userid"  
-            android:textSize="20dp"/>  
-        <Button                 
-            android:id="@+id/discount_get_id"
-            android:layout_width="121dp"
-            android:layout_height="43dp"
-            android:layout_toRightOf="@id/user_input_id"
-            android:layout_centerVertical="true"    
-            android:layout_marginRight="17dp"
-            android:text="@string/order_text_btn_discount"   
-            android:textColor="#ffffff"       
-            android:background="@drawable/myorder_btn_order_bg"/>                                 
-    </RelativeLayout>
-                 		   
-    <RelativeLayout     
-        android:orientation="horizontal"       
-        android:layout_width="fill_parent" 
-        android:layout_height="43dp"
-        android:layout_below="@id/layout_04"
-        android:background="#ededed"
-        android:id="@+id/layout_05">  
-        <TextView                   
-            android:id="@+id/discount_price"
-            android:layout_width="120dp"
-            android:layout_height="43dp"
-            android:layout_alignParentRight="true"
-            android:gravity="right|center_vertical" 
-            android:background="#ededed"                    
-            android:layout_marginRight="17dp" 
-            android:layout_centerVertical="true"
-            android:text="@string/order_text_discount"                              
-            android:textColor="#4d4d4d"      
-            android:textSize="20dp" /> 
-        <TextView                        
-            android:id="@+id/original_price"
-            android:layout_width="120dp"
-            android:layout_height="43dp"
-            android:layout_toLeftOf="@id/discount_price"    
-            android:gravity="right|center_vertical" 
-            android:layout_centerVertical="true"
-            android:background="#ededed"                    
-            android:layout_marginLeft="24dp" 
-            android:text="@string/order_text_originalprice"                                              
-            android:textColor="#4d4d4d"      
-            android:textSize="20dp" />                              
-    </RelativeLayout>       
-                   		             
-    <RelativeLayout     
-        android:orientation="horizontal"       
-        android:layout_width="fill_parent" 
-        android:layout_height="43dp"
-        android:layout_below="@id/layout_05"
-        android:background="#ededed"
-        android:id="@+id/layout_06">  
-        <TextView                   
-            android:id="@+id/real_price"
-            android:layout_width="160dp"
-            android:layout_height="43dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:gravity="right|center_vertical" 
-            android:background="#ededed"                    
-            android:layout_marginRight="17dp" 
-            android:text="@string/order_text_realprice"                              
-            android:textColor="#fe3c3c"      
-            android:textSize="20dp" /> 
-    </RelativeLayout>   
-                                    
     <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="#ededed"
+        android:orientation="vertical" >
+
+        <RelativeLayout
+            android:id="@+id/layout_01"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <ListView
+                android:id="@+id/myorder_listView"
+                android:layout_width="match_parent"
+                android:layout_height="236dp"
+                android:divider="#d9d9d9"
+                android:dividerHeight="1dp"
+                android:minHeight="36dp" >
+            </ListView>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/layout_02"
+            android:layout_width="fill_parent"
+            android:layout_height="43dp"
+            android:layout_below="@id/layout_01"
+            android:layout_marginTop="15dp"
+            android:background="#ededed"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/table_id"
+                android:layout_width="78dp"
+                android:layout_height="43dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="24dp"
+                android:background="#ededed"
+                android:gravity="left|center_vertical"
+                android:text="@string/order_text_title_tableid"
+                android:textColor="#4d4d4d"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/table_input_id"
+                android:layout_width="220dp"
+                android:layout_height="43dp"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/table_id"
+                android:hint="@string/order_text_hint_tableid"
+                android:inputType="number"
+                android:maxLength="20"
+                android:singleLine="true"
+                android:textSize="20dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/layout_03"
+            android:layout_width="fill_parent"
+            android:layout_height="43dp"
+            android:layout_below="@id/layout_02"
+            android:background="#ededed"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/employee_id"
+                android:layout_width="78dp"
+                android:layout_height="43dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="24dp"
+                android:background="#ededed"
+                android:gravity="left|center_vertical"
+                android:text="@string/order_text_title_employee"
+                android:textColor="#4d4d4d"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/employee_input_id"
+                android:layout_width="220dp"
+                android:layout_height="43dp"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/employee_id"
+                android:hint="@string/order_text_hint_qrcode"
+                android:inputType="number"
+                android:maxLength="20"
+                android:singleLine="true"
+                android:textSize="20dp" />
+
+            <Button
+                android:id="@+id/employee_2code_id"
+                android:layout_width="121dp"
+                android:layout_height="43dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="17dp"
+                android:layout_toRightOf="@id/employee_input_id"
+                android:background="@drawable/order_btn_2code_bg" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/layout_04"
+            android:layout_width="fill_parent"
+            android:layout_height="60dp"
+            android:layout_below="@id/layout_03"
+            android:background="#ededed"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/user_id"
+                android:layout_width="78dp"
+                android:layout_height="43dp"
+                android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="24dp"
+                android:background="#ededed"
+                android:gravity="left|center_vertical"
+                android:text="@string/order_text_title_userid"
+                android:textColor="#4d4d4d"
+                android:textSize="20dp" />
+
+            <EditText
+                android:id="@+id/user_input_id"
+                android:layout_width="220dp"
+                android:layout_height="43dp"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/user_id"
+                android:hint="@string/order_text_hint_userid"
+                android:inputType="number"
+                android:maxLength="20"
+                android:singleLine="true"
+                android:textSize="20dp" />
+
+            <Button
+                android:id="@+id/discount_get_id"
+                android:layout_width="121dp"
+                android:layout_height="43dp"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="17dp"
+                android:layout_toRightOf="@id/user_input_id"
+                android:background="@drawable/myorder_btn_order_bg"
+                android:text="@string/order_text_btn_discount"
+                android:textColor="#ffffff" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/layout_05"
+            android:layout_width="fill_parent"
+            android:layout_height="43dp"
+            android:layout_below="@id/layout_04"
+            android:background="#ededed"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/discount_price"
+                android:layout_width="120dp"
+                android:layout_height="43dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="17dp"
+                android:background="#ededed"
+                android:gravity="right|center_vertical"
+                android:text="@string/order_text_discount"
+                android:textColor="#4d4d4d"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/original_price"
+                android:layout_width="120dp"
+                android:layout_height="43dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="24dp"
+                android:layout_toLeftOf="@id/discount_price"
+                android:background="#ededed"
+                android:gravity="right|center_vertical"
+                android:text="@string/order_text_originalprice"
+                android:textColor="#4d4d4d"
+                android:textSize="20dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/layout_06"
+            android:layout_width="fill_parent"
+            android:layout_height="43dp"
+            android:layout_below="@id/layout_05"
+            android:background="#ededed"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/real_price"
+                android:layout_width="160dp"
+                android:layout_height="43dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="17dp"
+                android:background="#ededed"
+                android:gravity="right|center_vertical"
+                android:text="@string/order_text_realprice"
+                android:textColor="#fe3c3c"
+                android:textSize="20dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
             android:id="@+id/myorder_layout_button"
             android:layout_width="fill_parent"
             android:layout_height="60dp"
-            android:layout_alignParentBottom="true"
-            android:gravity="center_vertical" 
+            android:layout_below="@id/layout_06"
+            android:layout_marginTop="55dp"
             android:background="#ffdddddd"
-            android:orientation="vertical" >        
-            <TextView                   
+            android:gravity="center_vertical"
+            android:orientation="vertical" >
+
+            <TextView
                 android:id="@+id/goods_allprice"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
-                android:gravity="left|center_vertical" 
-                android:background="#ffdddddd"                    
-                android:layout_marginLeft="35dp" 
-                android:text="@string/order_text_realprice"                           
-                android:textColor="#fe3c3c"      
+                android:layout_marginLeft="35dp"
+                android:background="#ffdddddd"
+                android:gravity="left|center_vertical"
+                android:text="@string/order_text_realprice"
+                android:textColor="#fe3c3c"
                 android:textSize="20dp" />
-                                            
+
             <Button
                 android:id="@+id/ok_button"
                 android:layout_width="121dp"
@@ -217,9 +235,11 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="40dp"
-                android:text="@string/order_text_btn_ok" 
-                android:textColor="#ffffff" 
-                android:textSize="20dp" 
-                android:background="@drawable/myorder_btn_order_bg"/>                                                                                                                                                                                            
-        </RelativeLayout>           
-</RelativeLayout>
+                android:background="@drawable/myorder_btn_order_bg"
+                android:text="@string/order_text_btn_ok"
+                android:textColor="#ffffff"
+                android:textSize="20dp" />
+        </RelativeLayout>
+    </RelativeLayout>
+
+</ScrollView>
