--- a/02_code/android/eOrderMobile/res/layout/order_count_view.xml
+++ b/02_code/android/eOrderMobile/res/layout/order_count_view.xml
@@ -18,7 +18,7 @@
             android:layout_centerInParent="true"
             android:contentDescription="@null"
             android:src="@drawable/ic_action_order" />
-        
+
         <TextView
             android:id="@+id/order_count"
             android:layout_width="wrap_content"
@@ -29,8 +29,7 @@
             android:gravity="center"
             android:textColor="@android:color/white"
             android:textSize="11.0sp"
-            android:visibility="invisible" 
-            />
+            android:visibility="invisible" />
     </RelativeLayout>
-    
+
 </RelativeLayout>
