修改logo，增加网络异常的提示

--- a/02_code/android/eOrderMobile/res/layout/maintab_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout/maintab_activity.xml
@@ -25,5 +25,34 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="gone" />
+    
+    <RelativeLayout
+        android:id="@+id/fail_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_centerInParent="true"
+        android:orientation="horizontal"
+        android:visibility="gone">						
+        <TextView
+            android:id="@+id/fail_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/toast_get_data_fail"
+            android:textColor="#4d4d4d"	
+            android:textSize="20dp" />
+        <Button		
+            android:id="@+id/refresh_btn"
+            android:layout_width="121dp"
+            android:layout_height="43dp"
+			android:layout_below="@id/fail_text"
+			android:layout_marginTop="10dp"
+            android:layout_centerInParent="true"
+            android:background="@drawable/myorder_btn_order_bg"
+            android:text="@string/action_refresh"
+            android:textColor="#ffffff"
+            android:textSize="20dp" />
+    </RelativeLayout>
+    
 
 </RelativeLayout>
