--- a/02_code/android/eOrderMobile/res/layout-xhdpi/order_activity.xml
+++ b/02_code/android/eOrderMobile/res/layout-xhdpi/order_activity.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#ededed" >
-
+	
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -15,9 +15,9 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
-
+				
             <ListView
-                android:id="@+id/myorder_listView"
+                android:id="@+id/order_listView"
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
                 android:divider="#d9d9d9"
